# Ferrous-Scroll-Tauri

./: .gitignore  README.md  build.ps1  build.sh  debug.html  test_api.html  test_category_tags.sh  test_error_handling_fix.sh  test_multiple_errors_fix.sh  test_simple.sh  test_unique_constraint.sh
.github/workflows/: Build Windows Only.yml
src/: index.html  script.js  style.css  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/models/: todo.rs
src-tauri/src/storage/: mod.rs
