[package]
name = "ferrous-scroll"
version = "0.1.0"
edition = "2021"

[lib]
name = "ferrous_scroll_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# 数据库和模型
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"  # Android 特定依赖

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

